[package]
name = "dust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
futures = "0.3.25"
wither = "0.9.0"
thiserror = "1.0.37"
axum = { version = "0.5.17", features = ["headers"] }
tokio = { version = "1.24.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tower-http = { version = "0.3.4", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
] }
http = "0.2.8"
chrono = "0.4.22"
async-trait = "0.1.58"
bson = { version = "2.2.0", features = ["serde_with", "chrono-0_4"] }
jsonwebtoken = "8.1.1"
once_cell = "1.16.0"
bcrypt = "0.13.0"
validator = { version = "0.16.0", features = ["derive"] }
lazy_static = "1.4.0"
mime = "0.3.16"
bytes = "1.2.1"

[dev-dependencies]
assert-json-diff = "2.0.2"
reqwest = { version = "0.11.12", features = ["json"] }
rusty-hook = "^0.11.2"
